May 15, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/psxdma.h: spu dma was fixed.
 * libpcsxcore/r3000a.c: Likewise.
 * libpcsxcore/psxdma.c: Likewise.

May 14, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/plugins.c: Fixed crash when launching another game if netplay
   plugin is selected but not used during the previously running game.
 * gui/Plugin.c: Use TRUE/FALSE for Config.UseNet.
 * win32/gui/plugin.c: Likewise.
 * libpcsxcore/psxbios.c: Minor cleanup.

May 14, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/psxinterpreter.c: Bias was moved into rec/int.
 * libpcsxcore/ppc/pR3000A.c: Likewise.
 * libpcsxcore/cdrom.c: Likewise.
 * libpcsxcore/ix86_64/iR3000A-64.c: Likewise.
 * libpcsxcore/mdec.c: Likewise.
 * libpcsxcore/ix86/iR3000A.c: Likewise.
 * libpcsxcore/psxcommon.h: Likewise.
 * libpcsxcore/sio.c: Likewise.
 * libpcsxcore/psxdma.c: Likewise.
 * libpcsxcore/psxcounters.c: Likewise.
 * po/ru_RU.po: Updated.

May 14, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * data/pcsx.glade2: Moved About dialog box out of glade2 file.
 * gui/AboutDlg.c: Added.
 * gui/AboutDlg.h: Likewise.
 * gui/Gtk2Gui.c: Call RunAboutDialog() instead of showing about dialog from
   glade2 file.
 * po/pcsx.pot, po/pt_BR.po, po/it.po, po/zh_TW.po, po/ru_RU.po, po/zh_CN.po:
   Updated.
 * gui/Makefile.am: Added AboutDlg.c.
 * po/POTFILES.in: Added all current files.

May 13, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/plugins.h: CDRgetBufferSub for internal cdr plugin.
 * libpcsxcore/plugins.c: Likewise.

May 13, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfnet/gui.c: Get the correct address under GNU/Linux.
 * plugins/dfnet/dfnet.c: Removed sockGetIP(), which is unused in plugin.
 * plugins/dfnet/dfnet.h: Likewise.
 * plugins/dfnet/dfnet.glade2: Fixed max length of IP address entry.
 * libpcsxcore/gte.c: Improved accuracy (or 'inaccuracy') of the divider
   (courtesy of shalma).
 * libpcsxcore/gte_divider.h: Added.